[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "ritech"
version = "0.0.1"
description = "Realtime GTFS API for RIT passio"
readme = "README.md"
authors = ["Glenn Tatum <glennetatum@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11.2"
protobuf = "5.27.2"

[project.urls]
Homepage = "https://github.com/GlennTatum/rittech"